<resources>
    <string name="app_name">智能货柜</string>
    <string name="cancel1">取消</string>
    <string name="language_and_area">语言地区</string>
    <string name="language_current_area">当前地区：%s</string>
    <string name="language_current_language">当前语言：%s</string>
    <string name="confirm">确认</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_count_down_text">%d秒</string>
    <string name="register_get_verify_code">获取验证码</string>
    <string name="register_input_password_6">请输入至少6位字母数字组合密码</string>
    <string name="no_data_now">暂无数据</string>
    <string name="login">登录</string>
    <string name="hint">提示</string>
    <string name="choose_bank_card">请选择</string>
    <string name="ok">确定</string>
    <string name="lock_comfrim">是否确认锁定货柜</string>
    <string name="toast_back_again_exit">再按一次退出</string>
    <string name="register_input_chant_name">请输入账号</string>
    <string name="register_input_chant_num">请输入商户号</string>
    <string name="login_change_pwd_different">两次输入的新密码不一致</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="text_chant_num">商户号</string>
    <string name="et_hint_chant_num">请输入商户号</string>
    <string name="text_number">账　号</string>
    <string name="et_hint_number">请输入账号</string>
    <string name="text_password">密　码</string>
    <string name="et_hint_password">请输入密码</string>
    <string name="title_forgetpwd">忘记密码</string>
    <string name="toast_newpwd">新密码不能少于六位!</string>
    <string name="toast_surepwd">确认密码不能少于六位!</string>
    <string name="text_new_password">新密码</string>
    <string name="et_hint_new_password">请输入新密码</string>
    <string name="text_sure_new_password">确认新密码</string>
    <string name="et_hint_sure_new_password">请再次输入新密码</string>
    <string name="text_verification_code">验证码</string>
    <string name="et_hint_verification_code">请输入验证码</string>
    <string name="text_get_verification_code">获取验证码</string>
    <string name="title_addcheck">添加新盘点</string>
    <string name="toast_choose_goods">请选择商品</string>
    <string name="title_choose_goods">选择商品</string>
    <string name="comit_sure">确定(</string>
    <string name="title_counter">货柜管理</string>
    <string name="block">锁定</string>
    <string name="coming_soon">敬请期待</string>
    <string name="title_execu_goout">执行出库</string>
    <string name="title_extcu_input">执行入库</string>
    <string name="title_faclity">设备管理</string>
    <string name="title_goods_allot">货品调拨</string>
    <string name="text_check_counter">盘点货柜:</string>
    <string name="text_goods_name">商品名称</string>
    <string name="text_damage_goods">损坏商品</string>
    <string name="sale_goods_count">在售商品</string>
    <string name="text_comit">提交完成</string>
    <string name="text_facility_code">设备编码:</string>
    <string name="text_facility_name">设备名称:</string>
    <string name="text_counter_address">货柜地址:</string>
    <string name="text_distance">当前距离:</string>
    <string name="text_goout_counter">调出货柜:</string>
    <string name="text_choose">请选择:</string>
    <string name="radio_counter">货柜</string>
    <string name="radio_bin">仓</string>
    <string name="get_permission_failed">获取必要权限失败，请到应用设置中授予权限后再使用！</string>
    <string name="personinfo_permission_photo_failed">获取拍照权限失败，请到应用设置中授予权限后再使用！</string>
    <string name="personinfo_permission_album_failed">获取相册读取权限失败，请到应用设置中授予权限后再使用！</string>
    <string name="personinfo_info_avatar_camera">拍照</string>
    <string name="personinfo_info_avatar_photo">相册</string>
    <string name="text_hint_coose_counter_and_bin">选择调入的货柜或仓</string>
    <string name="text_goout_goods_count">调出商品数量</string>
    <string name="text_comit_allot">提交调拨单</string>
    <string name="text_goout_code">出库单编号:</string>
    <string name="text_allot_time">调拨时间:</string>
    <string name="text_person_zd">制单人:</string>
    <string name="text_person_cz">操作人:</string>
    <string name="text_alot_count">调出数量</string>
    <string name="text_sure_count">实际数量</string>
    <string name="text_comit_goout">确认出库</string>
    <string name="text_input_code">入库单编号:</string>
    <string name="text_inputt_counter">调入货柜:</string>
    <string name="text_input_count">调入数量</string>
    <string name="text_comit_input">确认入库</string>
    <string name="toast_choose_goods_count">请输入调出商品数量</string>
    <string name="toast_choose_input_allot_counter_and_bin">请选择调入的货柜或仓</string>
    <string name="toast_agin_choose">调出货柜不能和调入货柜一致，请重新选择!</string>
    <string name="title_detail">详情</string>
    <string name="title_goout">出货管理</string>
    <string name="toast_no_context">暂无数据</string>
    <string name="title_exhibit_goods">上货管理</string>
    <string name="title_order">订单管理</string>
    <string name="text_counter_name">货柜名称:</string>
    <string name="title_order_detail">订单明细</string>
    <string name="text_yuan">元</string>
    <string name="text_order_num">订单编号:</string>
    <string name="text_order_time">下单时间:</string>
    <string name="text_order_name">下单用户:</string>
    <string name="text_buy_goods_count">购买商品数量:</string>
    <string name="text_total">合计:</string>
    <string name="title_counter_check">货柜盘点</string>
    <string name="text_addnew_check">添加新盘点</string>
    <string name="text_look_detail">查看详情</string>
    <string name="text_repertory_check_code">盘点单编号:</string>
    <string name="text_repertory_check_time">盘点时间:</string>
    <string name="text_repertory_person">盘点人:</string>
    <string name="text_pay_goods">在售商品</string>
    <string name="text_pay_price">支付金额:</string>
    <string name="text_click_input">点击进入</string>
    <string name="update_title">检测到新版更新</string>
    <string name="ignore">取消</string>
    <string name="update">立即升级</string>
    <string name="no_available_net">无可用网络</string>
    <string name="update_started">开始下载更新，请稍候</string>
    <string name="action_settings">Settings</string>
    <string name="login_toa_text">请输入正确的用户名</string>
    <string name="login_toa_pwd_text">密码不能少于六位!</string>
    <string name="login_toa_pwd_big">密码不能大于十六位!</string>
    <string name="text_rice">米</string>
    <string name="text_warp">新年新惊喜新包装</string>
    <string name="text_specification">规格:</string>
    <string name="title_right_close_the_door">关门</string>
    <string name="dialog_block_counter">确定锁定货柜吗?</string>
    <string name="dialog_deblocking">确定解锁货柜吗?</string>
    <string name="toast_count_no">实际数量不能大于调出数量</string>
    <string name="toast_count_in_no">实际数量不能大于调入数量</string>
    <string name="title_facility_polling">设备巡检</string>
    <string name="title_open_the_door">扫一扫</string>
    <string name="toast_counter_qrcode">请扫货柜二维码</string>
    <string name="text_can_error">扫描出错</string>
    <string name="toast_counter_inconformity">选择货柜与实际货柜不一致!</string>
    <string name="right_title_language">语言</string>
    <string name="right_title_chin">中文</string>
    <string name="text_order_status">订单状态:</string>
    <string name="text_order_detail_pay">支付方式:</string>
    <string name="text_order_detail_abnormal">异常状态:</string>
    <string name="order_unpaid">待支付</string>
    <string name="order_have_paid">已支付</string>
    <string name="order_shipped">已发货</string>
    <string name="order_off_the_stocks">已完成</string>
    <string name="order_cancel">取消</string>
    <string name="order_refund">退款</string>
    <string name="order_no_shopping">未购物</string>
    <string name="order_alipay">支付宝</string>
    <string name="order_wecat">微信</string>
    <string name="order_integral">积分</string>
    <string name="order_wx_integral">积分+微信</string>
    <string name="order_alipay_integral">积分+支付宝</string>
    <string name="order_bank_card">银行卡</string>
    <string name="order_no_error">订单无异常</string>
    <string name="order_error">订单异常</string>
    <string name="order_a_payment_of">发起补缴</string>
    <string name="order_have_to_pay_up">已补缴</string>
    <string name="order_Initiate_a_refund">发起退款</string>
    <string name="order_have_a_refund">已退款</string>
    <string name="order_the_order_of_the_service">客服下单</string>
    <string name="login_logout_title">退出登录</string>
    <string name="login_logout_content">确定要退出登录</string>
    <string name="text_replment_comit">提交补货单</string>
    <string name="text_replment_counter">补货货柜:</string>
    <string name="text_replment_addnew">添加新补货</string>
    <string name="text_replment_goods_count">补货商品数量</string>
    <string name="text_replment_code">补货单编号:</string>
    <string name="text_replment_time">补货时间:</string>
    <string name="text_replment_person">补货人:</string>
    <string name="title_replment_detail">补货详情</string>
    <string name="text_repairs_comit">提交报修</string>
    <string name="toast_repairs_cause">请选择报修原因</string>
    <string name="text_repairs_cause">报修原因:</string>
    <string name="text_counter_status">请输入设备状态。</string>
    <string name="text_photo_input">拍照上传</string>
    <string name="text_counter_block">冰柜锁定</string>
    <string name="title_repairs">设备报修</string>
    <string name="left_title_clear_away">清除</string>
    <string name="toast_plase_close_the_door">请先关门!</string>
    <string name="title_replment_list">补货列表</string>
    <string name="title_replment_apply">补货申请</string>
    <string name="toast_choose_cang">请选择货损仓</string>
    <string name="toast_no_counter_message">暂未配置货柜信息</string>
    <string name="toast_chose_repairs_cause">请选择报修原因!</string>
    <string name="list_text_cabinet_damage">柜体损坏</string>
    <string name="list_text_counter_blo_damage">柜锁损坏</string>
    <string name="list_text_counter_damage">柜面损坏</string>
    <string name="list_text_other">其他</string>
    <string name="list_text_plase_choose">请选择:</string>
    <string name="text_order_query">订单查询</string>
    <string name="plase_order_user">下单用户:</string>
    <string name="text_query">查询</string>
    <string name="text_order_cancel">订单消单</string>
    <string name="et_plase_phone_number">请输入下单用户手机号</string>
    <string name="et_plase_order_num">请输入订单编号</string>
    <string name="text_store_name">门店名称:</string>
    <string name="order_pay_error">支付失败</string>
    <string name="order_miss">已消单</string>
    <string name="permission_sure">同意授权</string>
    <string name="permission_no">拒绝授权</string>
    <string name="text_shop_name">门店名称:</string>
    <string name="text_yx_counter">运营货柜:</string>
    <string name="text_yesToday_order">昨日订单:</string>
    <string name="text_toDay_order">今日订单:</string>
    <string name="text_yesToday_pay">昨日交易额:</string>
    <string name="text_toDay_pay">今日交易额:</string>
    <string name="text_yesToday_goods">昨日销售商品:</string>
    <string name="text_toDay_goods">今日销售商品:</string>
    <string name="text_yesToday_miss_order">昨日消单:</string>
    <string name="text_toDay_miss_order">今日消单:</string>
    <string name="text_oos_status">缺货状态:</string>
    <string name="todo">TODO</string>
    <string name="text_phoneNum">手机号码:</string>
    <string name="hint_please_phoneNum">请输入客户手机号码</string>
    <string name="text_count">数量</string>
    <string name="text_add_goods">添加商品</string>
    <string name="text_sure_k">确定</string>
    <string name="text_refund_num">退款单编号:</string>
    <string name="text_cz_time">操作时间:</string>
    <string name="text_miss_order_count">消单商品数量:</string>
    <string name="text_refund_price">退款金额:</string>
    <string name="text_update_price">调整后价格</string>
    <string name="text_counter_price">货柜售价</string>
    <string name="text_repertory_count">库存数量</string>
    <string name="title_counter_pri">库存查看</string>
    <string name="text_value">阈值</string>
    <string name="title_at_count">当前库存</string>
    <string name="title_oos_goods_look">缺货商品查看</string>
    <string name="title_shop_home">店长首页</string>
    <string name="sp_sing_in">签入</string>
    <string name="sp_sing_out">签出</string>
    <string name="title_one_home">单店首页</string>
    <string name="text_open_store_ing">　开店中　</string>
    <string name="text_close_store_ing">　闭店中　</string>
    <string name="text_in_warehouse">调入仓库:</string>
    <string name="text_commit_out_order">提交出库单</string>
</resources>