<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/round_rect_white"
              android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/text_order_query"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_order_num"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:textSize="14sp"/>

        <code.ytn.cn.widget.ClearEditText
            android:id="@+id/plase_order_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:hint="@string/et_plase_order_num"
            android:padding="5dp"
            android:background="@drawable/et_background"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plase_order_user"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:textSize="14sp"/>

        <code.ytn.cn.widget.ClearEditText
            android:id="@+id/plase_order_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:padding="5dp"
            android:inputType="number"
            android:hint="@string/et_plase_phone_number"
            android:maxLength="11"
            android:background="@drawable/et_background"/>
    </LinearLayout>

    <View style="@style/person_split_match"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/cancel1"
            android:textColor="@color/dialog_button_text"
            android:textSize="17sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/spilt_line"/>

        <TextView
            android:id="@+id/dialog_query"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_query"
            android:textColor="@color/dialog_button_text"
            android:textSize="17sp"/>
    </LinearLayout>

</LinearLayout>
