<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="code.ytn.cn.home.controller.GoodsAllotActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="12dp"
            android:paddingStart="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:text="@string/text_goout_counter"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/goods_allot_out_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/execute_input_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/goods_allot_ll"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="12dp"
            android:paddingStart="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:text="@string/text_choose"
                android:textSize="14sp"/>

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/goods_allot_input_typeo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/radio_counter"/>

                <RadioButton
                    android:id="@+id/goods_allot_input_typet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/radio_bin"/>
            </RadioGroup>

            <TextView
                android:id="@+id/goods_allot_input_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="right"
                android:hint="@string/text_hint_coose_counter_and_bin"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/list_more"/>

        </LinearLayout>

    </LinearLayout>

    <View style="@style/person_split_matchs"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:text="@string/text_goods_name"
            android:textSize="14sp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:text="@string/text_goout_goods_count"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded"/>

    </LinearLayout>


    <ListView
        android:id="@+id/goods_allot_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
    </ListView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/goods_allot_choose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#476480"
            android:gravity="center"
            android:text="@string/title_choose_goods"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/goods_allot_comit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/comit_button"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/text_comit_allot"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </LinearLayout>


</LinearLayout>
