<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="code.ytn.cn.home.controller.AddNewCheckActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_check_counter"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/addnew_check_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/execute_input_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            />

    </LinearLayout>


</LinearLayout>



    <View style="@style/person_split_matchs"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:text="@string/text_goods_name"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/addnew_check_damage"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"
            android:text="@string/text_damage_goods"
            android:gravity="right"
            android:paddingStart="0dp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"
            android:text="@string/sale_goods_count"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:gravity="right"
            android:textSize="14sp"/>

    </LinearLayout>


    <ListView
        android:id="@+id/addnew_allot_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
    </ListView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addnew_check_choose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#476480"
            android:gravity="center"
            android:text="@string/title_choose_goods"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/addnew_check_comit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/comit_button"
            android:gravity="center"
            android:text="@string/text_comit"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>
