<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="code.ytn.cn.login.controller.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <!--start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="12dp"
                android:paddingStart="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/text_chant_num"
                    android:textSize="14sp"/>

                <code.ytn.cn.widget.ClearEditText
                    android:id="@+id/forget_chant_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/et_hint_chant_num"
                    android:inputType="number"
                    android:maxLength="12"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <View style="@style/person_split_margin_left_right"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="12dp"
                android:paddingStart="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/text_number"
                    android:textSize="14sp"/>

                <code.ytn.cn.widget.ClearEditText
                    android:id="@+id/forget_chant_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:hint="@string/et_hint_number"
                    android:maxLength="12"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <View style="@style/person_split_margin_left_right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="12dp"
                android:paddingStart="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/text_new_password"
                    android:textSize="14sp"/>

                <code.ytn.cn.widget.ClearEditText
                    android:id="@+id/forget_new_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:hint="@string/et_hint_new_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <View style="@style/person_split_margin_left_right"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="12dp"
                android:paddingStart="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/text_sure_new_password"
                    android:textSize="14sp"/>

                <code.ytn.cn.widget.ClearEditText
                    android:id="@+id/forget_sure_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:hint="@string/et_hint_sure_new_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <View style="@style/person_split_margin_left_right"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="12dp"
                android:paddingStart="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/text_verification_code"
                    android:textSize="14sp"/>

                <code.ytn.cn.widget.ClearEditText
                    android:id="@+id/forget_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:hint="@string/et_hint_verification_code"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/forget_get_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_tran_button"
                    android:gravity="center"
                    android:padding="7dp"
                    android:text="@string/text_get_verification_code"
                    android:textColor="@color/dodgerblue"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <View style="@style/person_split_margin_left_right"/>
        </LinearLayout>

        <TextView
            android:id="@+id/forget_comit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="20dp"
            android:background="@drawable/ic_button"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

        <View style="@style/person_split_matchs"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ytn_icon"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
